mp12_microarch_twotier_starter/free_service/free_deployment.yaml
# Starter Kubernetes Deployment for the Free Tier service.
#
# This YAML defines a deployment that runs both the Flask API and Envoy proxy
# in the 'free-service' namespace. 
#
# TODO: Fill in the Kubernetes Deployment spec here.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: free-tier-service
  namespace: free-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: free-app
  template:
    metadata:
      labels:
        app: free-app
    spec:
      containers:
        - name: free-tier-app-docker 
          image: amyyuan2244/free-tier-app-docker:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          imagePullPolicy: Always
        - name: envoy-container
          image: envoyproxy/envoy:v1.22.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          imagePullPolicy: Always
          volumeMounts:
            - name: envoy-config-volume
              mountPath: /etc/envoy/

      volumes:
        - name: envoy-config-volume
          configMap:
            name: free-envoy-config
