mp12_microarch_twotier_starter/free_service/free_tier_envoy.yaml
# Starter Envoy proxy configuration for the Free Tier service.
#
# This YAML configures Envoy to proxy HTTP requests to the Flask API running
# on free-tier-service. Students may use this as a base for adding routing, filters,
# or other proxy features as needed.
#
# TODO: Fill in the Envoy proxy configuration here.

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901  # Admin interface port

static_resources:
  listeners:
    - name: free_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080  # Envoy listens here
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: free_http
              codec_type: AUTO
              route_config:
                name: free_route
                virtual_hosts:
                  - name: free_service_host
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/free"
                        route:
                          cluster: free_service_flask
                          # prefix_rewrite: "/"  # Strip /free before forwarding TODO?
              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: free_service_flask
      connect_timeout: 5s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: free_service_flask
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    # Kubernetes Service DNS TODO: should this be 127.0.0.1 (localhost) yes b/c same pod
                    # or free-tier-service.free-service.svc.cluster.local (Kubernetes service DNS)?
                    address: 127.0.0.1
                    port_value: 5000
